--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
   </div>
 </section>
 
-<!-- Skills -->
+<!-- Skills section section start from here -->
 <section class="py-5">
   <div class="container">
     <h3 class="text-center mb-4" id="skills"><strong class="hero-name">My</strong> Skills</h3>
@@ -289,8 +289,25 @@
     </div>
   </div>
 </section>
+ <!-- Skills section end here -->
+
+
+<!-- Back to top button (fixed bottom-left), code starts from here-->
+
+<button id="backToTop" class="back-to-top" aria-label="Back to top" title="Back to top">
+  <!-- up chevron SVG -->
+  <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+    <path d="M6 15l6-6 6 6" stroke="currentColor" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round"/>
+  </svg>
+</button>
+
+<!-- Back to top button (fixed bottom-left), code ends from here-->
+
+
 
 <script src="bootstrap.bundle.js"></script>
 <script src="animations.js"></script>
+<script src="/button.js"></script>
+
 </body>
 </html>
