--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
     <div class="row align-items-center">
       <div class="col-md-6 mb-4 mb-md-0 text-center">
-        <img src="" alt="profile" class="img-fluid rounded mx-auto d-block" style="max-width:85%;">
+        <img src="" alt="" class="img-fluid rounded mx-auto d-block" style="max-width:85%; border: 2px solid black; border-radius: 30px;">
       </div>
 
       <div class="col-md-6">
@@ -77,7 +77,7 @@
           <li><strong>Experience:</strong> <span class="text-muted">5+ years</span></li>
         </ul>
 
-        <a href="/umer.pdf" class="btn btn-success mt-3" download>Download PDF</a>
+        <a href="" class="btn btn-success mt-3" download>Download PDF</a>
       </div>
     </div>
   </div>
