--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
       <div class="col-md-6">
         <h4><strong>What I Do</strong></h4>
-        <p class="text-muted">I specialize in crafting responsive, user-friendly interfaces while ensuring clean, maintainable code for seamless performance and scalability.</p>
+        <p class="text-muted">I specialize in crafting responsive, user-friendly interfaces while ensuring clean, maintainable code for seamless performance and scalability. I also make them responsive by using  (CSS) and (Bootstrap). I also provide backend services with a focus on security.I also make wordpress website by using elementer, customize your site, plugin integration and much more. </p>
 
         <h4 class="mt-4"><strong>My Mission</strong></h4>
         <p class="text-muted">Bringing the gap between design and functionality, I create intuitive and dynamic experiences that elevate digital interactions.</p>
@@ -77,7 +77,7 @@
           <li><strong>Experience:</strong> <span class="text-muted">5+ years</span></li>
         </ul>
 
-        <a href="" class="btn btn-success mt-3" download>Download PDF</a>
+        <a href="/" class="btn btn-success mt-3" download>Download PDF</a>
       </div>
     </div>
   </div>
@@ -97,8 +97,8 @@
               <svg width="36" height="36" viewBox="0 0 24 24" fill="currentColor"><path d="M3 4c-1.1 0-2 .9-2 2v9c0 1.1.9 2 2 2h6v2H6v2h12v-2h-3v-2h6c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2H3zm0 2h18v9H3V6z"/></svg>
             </div>
             <div>
-              <h5 class="card-title text-dark">Web Design</h5>
-              <p class="card-text text-muted mb-0">Crafting visually appealing and user-friendly websites with modern UI/UX principles and responsive layouts.</p>
+              <h5 class="card-title text-dark">Responsive Website</h5>
+              <p class="card-text text-muted mb-0">Crafting visually appealing and user-friendly websites with mobile and tablet responsive site's layout.</p>
             </div>
           </div>
         </div>
@@ -113,7 +113,7 @@
             </div>
             <div>
               <h5 class="card-title text-dark">Frontend Development</h5>
-              <p class="card-text text-muted mb-0">Building fast, accessible interfaces using modern JS frameworks and component-based architecture.</p>
+              <p class="card-text text-muted mb-0">Building fast, accessible interfaces using modern JS frameworks like (Bootstrap V-5) and component-based architecture.</p>
             </div>
           </div>
         </div>
@@ -127,8 +127,8 @@
               <svg width="36" height="36" viewBox="0 0 24 24" fill="currentColor"><path d="M12 3C7.03 3 3 4.79 3 7v10c0 2.21 4.03 4 9 4s9-1.79 9-4V7c0-2.21-4.03-4-9-4zm0 2c4.41 0 8 1.12 8 2s-3.59 2-8 2-8-1.12-8-2 3.59-2 8-2zm0 14c-4.41 0-8-1.12-8-2v-6c1.66 1.08 5.48 1.83 8 1.83s6.34-.75 8-1.83v6c0 .88-3.59 2-8 2z"/></svg>
             </div>
             <div>
-              <h5 class="card-title text-dark">Backend & APIs</h5>
-              <p class="card-text text-muted mb-0">Designing robust backend services and RESTful APIs with a focus on performance and security.</p>
+              <h5 class="card-title text-dark">Backend Development</h5>
+              <p class="card-text text-muted mb-0">Designing robust backend services using (PHP) with a focus on performance and security.</p>
             </div>
           </div>
         </div>
@@ -141,11 +141,15 @@
         <div class="card h-100 shadow-sm">
           <div class="card-body d-flex">
             <div class="me-3 align-self-start">
-              <svg width="36" height="36" viewBox="0 0 24 24" fill="currentColor"><path d="M3 4c-1.1 0-2 .9-2 2v9c0 1.1.9 2 2 2h6v2H6v2h12v-2h-3v-2h6c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2H3zm0 2h18v9H3V6z"/></svg>
+              <!-- WordPress-like icon (36x36) -->
+<svg width="36" height="36" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+  <circle cx="12" cy="12" r="10" stroke="currentColor" stroke-width="1.6" fill="none"/>
+  <path d="M6.5 8.5 L9.5 16 L12 11 L14.5 16 L17.5 8.5" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round" fill="none"/>
+</svg>
             </div>
             <div>
-              <h5 class="card-title text-dark">Web Design</h5>
-              <p class="card-text text-muted mb-0">Crafting visually appealing and user-friendly websites with modern UI/UX principles and responsive layouts.</p>
+              <h5 class="card-title text-dark">Wordpress</h5>
+              <p class="card-text text-muted mb-0">Crafting visually appealing and user-friendly websites with modern UI/UX principles and responsive layouts by using wordpress. I can also integrate plugins to your site.</p>
             </div>
           </div>
         </div>
@@ -156,11 +160,20 @@
         <div class="card h-100 shadow-sm">
           <div class="card-body d-flex">
             <div class="me-3 align-self-start">
-              <svg width="36" height="36" viewBox="0 0 24 24" fill="currentColor"><path d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6z"/></svg>
+              <svg width="36" height="36" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+  <path d="M12 2a7 7 0 0 0-5 11c.9 1.2 1 2 1 3v1a2 2 0 0 0 2 2h4a2 2 0 0 0 2-2v-1c0-1 .1-1.8 1-3a7 7 0 0 0-5-11z"
+        stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
+  <path d="M10 14a2 2 0 0 0 4 0" stroke="currentColor" stroke-width="1.6" stroke-linecap="round"/>
+  <path d="M9 20h6" stroke="currentColor" stroke-width="1.6" stroke-linecap="round"/>
+  <!-- thinking dots -->
+  <circle cx="17" cy="5" r="0.9" fill="currentColor"/>
+  <circle cx="19" cy="3.8" r="0.7" fill="currentColor"/>
+  <circle cx="20.6" cy="2.7" r="0.55" fill="currentColor"/>
+</svg>
             </div>
             <div>
-              <h5 class="card-title text-dark">Frontend Development</h5>
-              <p class="card-text text-muted mb-0">Building fast, accessible interfaces using modern JS frameworks and component-based architecture.</p>
+              <h5 class="card-title text-dark">Problem Solver</h5>
+              <p class="card-text text-muted mb-0">I can help you to maintain and debug your site, improve it's trust score.</p>
             </div>
           </div>
         </div>
@@ -170,11 +183,18 @@
         <div class="card h-100 shadow-sm">
           <div class="card-body d-flex">
             <div class="me-3 align-self-start">
-              <svg width="36" height="36" viewBox="0 0 24 24" fill="currentColor"><path d="M12 3C7.03 3 3 4.79 3 7v10c0 2.21 4.03 4 9 4s9-1.79 9-4V7c0-2.21-4.03-4-9-4zm0 2c4.41 0 8 1.12 8 2s-3.59 2-8 2-8-1.12-8-2 3.59-2 8-2zm0 14c-4.41 0-8-1.12-8-2v-6c1.66 1.08 5.48 1.83 8 1.83s6.34-.75 8-1.83v6c0 .88-3.59 2-8 2z"/></svg>
+              <!-- JavaScript-like icon (36x36) -->
+<svg width="36" height="36" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" fill="none">
+  <rect x="2" y="2" width="20" height="20" rx="3" stroke="currentColor" stroke-width="1.6" fill="none"/>
+  <!-- simple "J" -->
+  <path d="M9 7v5a2 2 0 0 0 2 2h2" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round" fill="none"/>
+  <!-- simple "S" -->
+  <path d="M15.5 7.5c-0.6 0.8-1.6 1.3-1.6 2.2 0 1 1 1.3 1.6 1.8 0.6 0.5 0.6 1.5 0 2" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round" fill="none"/>
+</svg>
             </div>
             <div>
-              <h5 class="card-title text-dark">Backend & APIs</h5>
-              <p class="card-text text-muted mb-0">Designing robust backend services and RESTful APIs with a focus on performance and security.</p>
+              <h5 class="card-title text-dark">Animated Pages</h5>
+              <p class="card-text text-muted mb-0">Make your site more atractive by adding animation in it. I can do it for you by using JavaScript.</p>
             </div>
           </div>
         </div>
@@ -193,7 +213,7 @@
       <div class="mb-3">
         <h6 class="mb-1">HTML</h6>
         <div class="progress">
-          <div class="progress-bar bg-warning progress-bar-animated" style="width:55%;" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
+          <div class="progress-bar bg-warning progress-bar-animated" style="width:85%;" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
         </div>
       </div>
 
@@ -207,28 +227,28 @@
       <div class="mb-3">
         <h6 class="mb-1">JavaScript</h6>
         <div class="progress">
-          <div class="progress-bar bg-warning progress-bar-animated" style="width:97%;" role="progressbar" aria-valuenow="97" aria-valuemin="0" aria-valuemax="100"></div>
+          <div class="progress-bar bg-warning progress-bar-animated" style="width:70%;" role="progressbar" aria-valuenow="97" aria-valuemin="0" aria-valuemax="100"></div>
         </div>
       </div>
 
       <div class="mb-3">
         <h6 class="mb-1">Bootstrap</h6>
         <div class="progress">
-          <div class="progress-bar bg-warning progress-bar-animated" style="width:63%;" role="progressbar" aria-valuenow="63" aria-valuemin="0" aria-valuemax="100"></div>
+          <div class="progress-bar bg-warning progress-bar-animated" style="width:83%;" role="progressbar" aria-valuenow="63" aria-valuemin="0" aria-valuemax="100"></div>
         </div>
       </div>
 
       <div class="mb-3">
-        <h6 class="mb-1">React</h6>
+        <h6 class="mb-1">Wordpress</h6>
         <div class="progress">
-          <div class="progress-bar bg-warning progress-bar-animated" style="width:56%;" role="progressbar" aria-valuenow="56" aria-valuemin="0" aria-valuemax="100"></div>
+          <div class="progress-bar bg-warning progress-bar-animated" style="width:80%;" role="progressbar" aria-valuenow="56" aria-valuemin="0" aria-valuemax="100"></div>
         </div>
       </div>
 
       <div class="mb-3">
-        <h6 class="mb-1">Node.js</h6>
+        <h6 class="mb-1">PHP</h6>
         <div class="progress">
-          <div class="progress-bar bg-warning progress-bar-animated" style="width:47%;" role="progressbar" aria-valuenow="47" aria-valuemin="0" aria-valuemax="100"></div>
+          <div class="progress-bar bg-warning progress-bar-animated" style="width:73%;" role="progressbar" aria-valuenow="47" aria-valuemin="0" aria-valuemax="100"></div>
         </div>
       </div>
     </div>
